bazel_dep(name = "rules_rust", version = "0.50.1")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    versions = ["1.80.0"],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")
crate.spec(
    package = "syn",
    version = "2.0.72",
    features = ["full", "extra-traits"]
)
crate.spec(
    package = "quote",
    version = "1.0.36",
)
crate.spec(
    package = "anyhow",
    version = "1.0.86",
)
crate.spec(
    package = "proc-macro2",
    version = "1.0.86",
)
crate.spec(
    package = "crossbeam-channel",
    version = "0.5.13",
)
crate.spec(
    package = "crossbeam-utils",
    version = "0.8.20",
)
crate.spec(
    package = "rayon",
    version = "1.10.0",
)
crate.spec(
    package = "indicatif",
    version = "0.17.8",
)
crate.spec(
    package = "console",
    version = "0.15.8",
)
crate.spec(
    package = "rustc-hash",
    version = "2.0.0",
)
crate.spec(
    package = "typed-arena",
    version = "2.0.2",
)
crate.from_specs()
use_repo(crate, "crates")
